Kleine refactor